CHANGES-1.2.txt
---------------

CHANGES IN CUPS V1.2.11

	- The backends now manage the printer-state-reasons
	  attribute more accurately (STR #2345)
	- Java, PHP, Perl, and Python scripts did not work
	  properly (STR #2342)
	- The scheduler would take forever to start if the
	  maximum number of file descriptors was set to
	  "unlimited" (STR #2329)
	- The page-ranges option was incorrectly applied to the
	  banner pages (STR #2336)
	- Fixed some GCC compile warnings (STR #2340)
	- The DBUS notification code was broken for older
	  versions of DBUS (STR #2327)
	- The IPv6 code did not compile on HP-UX 11.23 (STR
	  #2331)
	- PPD constraints did not work properly with custom
	  options.
	- Regular PPD options with the name "CustomFoo" did
	  not work.
	- The USB backend did not work on NetBSD (STR #2324)
	- The printer-state-reasons attribute was incorrectly
	  cleared after a job completed (STR #2323)
	- The scheduler did not set the printer operation policy
	  on startup, only on soft reload (STR #2319)
	- The AP_FIRSTPAGE_InputSlot option did not clear any
	  ManualFeed setting that was made, which caused problems
	  with some PPD files (STR #2318)
	- cupsDoFileRequest() and cupsDoRequest() did not abort
	  when getting an error in the response (STR #2315)
	- The scheduler did not schedule jobs properly to remote
	  or nested classes (STR #2317)
	- Updated the mime.types and mime.convs headers to warn
	  that the files are overwritten when CUPS is installed.
	  Local changes should go in local.types or local.convs,
	  respectively (STR #2310)
	- The scheduler could get in an infinite loop if a
	  printer in an implicit class disappeared (STR #2311)
	- The pstops filter did not handle %%EndFeature comments
	  properly (STR #2306)
	- Fixed a problem with the Polish web page printer icons
	  (STR #2305)
	- ppdLocalize() now also localizes the cupsICCProfile
	  attributes.
	- The scheduler still had a reference to the incorrect